# agentic-engineering

./: .gitignore  .gitmodules  git-submodules.md
finally/backend/: pyproject.toml
finally/backend/app/: main.py
finally/backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
finally/backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py
pm/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pm/backend/: AGENTS.md
pm/backend/app/: ai.py  auth.py  board.py  db.py  dependencies.py  main.py  prompts.py
pm/backend/app/models/: __init__.py  api.py  board.py
pm/backend/app/repositories/: __init__.py  board_repo.py
pm/backend/app/routers/: __init__.py  ai.py  auth.py  board.py  health.py
pm/backend/app/services/: __init__.py  ai_service.py  board_service.py
pm/backend/app/static/: index.html
pm/backend/tests/: conftest.py  server_helpers.py  test_e2e_ai_chat.py  test_e2e_smoke.py  test_integration_ai_chat_api.py  test_integration_auth_flow.py  test_integration_board_api.py  test_integration_frontend_static.py  test_integration_root.py  test_live_llm_operations.py  test_regression_scripts.py  test_unit_ai_structured.py  test_unit_auth.py  test_unit_board_validation.py  test_unit_routes.py
pm/data/: pm.sqlite
pm/docs/: DATABASE.md  PLAN.md  code_review.md  review.md
pm/frontend/: AGENTS.md  playwright.config.ts
pm/frontend/src/app/: page.tsx  (+3 more)
pm/frontend/tests/: kanban.spec.ts
pm/scripts/: start-linux.sh  start-mac.sh  stop-mac.sh
(+51 files in other folders)
